--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -6723,3 +6723,63 @@ header .offcanvas-backdrop {
   }
 }
 /*# sourceMappingURL=style.css.map */
+
+
+
+.butn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 190px;
+  height: 45px;
+  text-align: center;
+  line-height: 45px;
+  color: #fff;
+  font-size: 15px;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: sans-serif;
+  box-sizing: border-box;
+  background: linear-gradient(90deg,#03a9f4,#ffeb3b,#f441af,#03a9f4);
+  background-size: 400%;
+  border-radius: 30px;
+  z-index: 1;
+  border: none;
+  outline: none;
+}
+
+.butn:hover {
+  animation: animate 6s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    background-position: 0%;
+  }
+
+  100% {
+    background-position: 400%;
+  }
+}
+
+.butn::before {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  z-index: -1;
+  background: linear-gradient(90deg,#03a9f4,#ffeb3b,#f441af,#03a9f4);
+  border-radius: 40px;
+  filter: blur(20px);
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.butn:hover::before {
+  filter: blur(20px);
+  opacity: 1;
+  animation: animate 6s linear infinite;
+}
