--- a/templates/index.html
+++ b/templates/index.html
@@ -113,8 +113,8 @@
                 </div>
             </div>
         </nav>
-        <a data-cursor="pointer" href="{% url 'signup_login' action='Registration' %}" class="btn btn-theme d-sm-inline-block d-none"><span>Login
-                Now</span></a>
+        <a data-cursor="pointer" href="{% url 'login' %}" class="btn btn-theme d-sm-inline-block d-none">
+            <span>Login Now</span></a>
     </header>
     <!-- header end -->
 
