--- a/templates/login.html
+++ b/templates/login.html
@@ -90,8 +90,9 @@
 
                                     <br>
                                     <div class="mb-3 form-group">
-                                        <button class="butn" type="button"><a href="{% url 'face_id' %}">Face ID Log in</a></button>
+                                        <button style="color: #000;" class="butn" type="button"><a href="{% url 'face_id' %}">Face ID Log in</a></button>
                                     </div>
+                                    
                                     
                                     <br>
                                     <div class="text-end">
