--- a/templates/chat.html
+++ b/templates/chat.html
@@ -68,12 +68,12 @@
                                     data-icon="refresh-circle"></i>
                                 <span>History</span> </button>
                         </li>
-                        <li data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Subscription"
+                        {% comment %} <li data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Subscription"
                             class="nav-item" role="presentation">
                             <button class="nav-link" data-bs-toggle="tab" data-bs-target="#subscription" type="button"
                                 role="tab" aria-controls="subscription" aria-selected="false"><i class="iconsax"
                                     data-icon="crown-2"></i> <span>Subscription</span></button>
-                        </li>
+                        </li> {% endcomment %}
                         <li data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Help" class="nav-item"
                             role="presentation">
                             <button class="nav-link" data-bs-toggle="tab" data-bs-target="#help" type="button"
@@ -114,7 +114,7 @@
                                 <button data-bs-toggle="collapse" data-bs-target="#navbarNav"
                                     class="inner-close d-block d-lg-none">Back
                                 </button>
-                                <div class="search-box">
+                                {% comment %} <div class="search-box">
                                     <i class="iconsax" data-icon="search-normal-2"></i>
                                     <input type="text" class="form-control" placeholder="Search here..">
                                 </div>
@@ -130,7 +130,7 @@
                                     <li><a href="#!" data-title="Password generator">Password generator</a></li>
                                     <li><a href="#!" data-title="Travel/hangout">Travel/hangout</a></li>
                                     <li><a href="#!" data-title="Essay writer">Essay writer</a></li>
-                                </ul>
+                                </ul> {% endcomment %}
                             </div>
                         </div>
                     </nav>
@@ -146,13 +146,13 @@
                             </a>
                             <h3 id="targetDiv">Ask anything</h3>
                         </div>
-                        <div class="header-option">
+                        {% comment %} <div class="header-option">
                             <a class="del-btn" data-cursor="pointer" href="#"><i class="iconsax"
                                     data-icon="trash"></i></a>
                             <a class="premium-btn" id="subscriptionBtn" data-cursor="pointer" href="#!"><i
                                     class="iconsax" data-icon="crown-2"></i> Get
                                 <span>premium</span></a>
-                        </div>
+                        </div> {% endcomment %}
                     </div>
                     <div class="main-chat">
                         <div class="no-chat">
