--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
                                 <a class="nav-link" href="chat.html">Chat</a>
                             </li> {% endcomment %}
 
-                            <li class="nav-item dropdown">
+<!--                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="javascript:void(0)"
                                     data-bs-toggle="dropdown">Pages</a>
 
@@ -95,7 +95,7 @@
                                         <a class="dropdown-item" href="terms.html">Terms & Conditon</a>
                                     </li>
                                 </ul>
-                            </li>
+                            </li> -->
 
                             <li class="nav-item">
                                 <a class="nav-link" href="https://portfolio0.pythonanywhere.com/">Developer</a>
@@ -113,16 +113,13 @@
                 </div>
             </div>
         </nav>
-{% if request.user.is_authenticated %}
-    <a data-cursor="pointer" href="{% url 'logout' %}" class="btn btn-theme d-sm-inline-block d-none">
-        <span>Logout</span>
-    </a>
-{% else %}
-    <a data-cursor="pointer" href="{% url 'login' %}" class="btn btn-theme d-sm-inline-block d-none">
-        <span>Login Now</span>
-    </a>
-{% endif %}
-
+        {% if session %}
+        <a data-cursor="pointer" href="{% url 'signout' %}" class="btn btn-theme d-sm-inline-block d-none">
+            <span>Logout</span></a>
+        {% else %}
+        <a data-cursor="pointer" href="{% url 'login' %}" class="btn btn-theme d-sm-inline-block d-none">
+            <span>Login Now</span></a>
+        {% endif %}
     </header>
     <!-- header end -->
 
@@ -139,9 +136,9 @@
                             <img src="https://themes.pixelstrap.net/mega_bot/assets/svg/home/2.svg" class="img-fluid effect2 rotate-effect" alt="">
                         </div>
                         <div>
-                            <h1>USE MEGABOT TO <div class="title-effect">
-                                    <img src="{% static 'assets/images/title-effect.png'%}" alt=""><span>SIMPLIFY</span>
-                                </div> YOUR LIFE</h1>
+                            <h1>Welcome to MegaBot Where <div class="title-effect">
+                                <img src="{% static 'assets/images/title-effect.png'%}" alt=""><span style="color: cyan;">Knowledge</span>
+                                </div> Meets Logic!</h1>
                             <p>
                                 Megabot is a robust AI tool that uses artificial intelligence algorithms to generate
                                 various kinds of content.
@@ -170,18 +167,18 @@
                         <div class="home-info">
                             <ul class="info-list">
                                 <li>Ask anything </li>
-                                <li>Generate image</li>
-                                <li>Translate anything</li>
+<!--                                 <li>Generate image</li>
+                                <li>Translate anything</li> -->
                             </ul>
-                            <ul class="star-rating">
+<!--                             <ul class="star-rating">
                                 <li><i class="ri-star-fill"></i></li>
                                 <li><i class="ri-star-fill"></i></li>
                                 <li><i class="ri-star-fill"></i></li>
                                 <li><i class="ri-star-fill"></i></li>
                                 <li><i class="ri-star-fill"></i></li>
-                            </ul>
-                            <h4>A technique to write
-                                all of your material 10 times more quickly.</h4>
+                            </ul> -->
+                            <br>
+                            <h4>A Creative AI Companion!</h4>
                         </div>
                     </div>
                 </div>
@@ -395,7 +392,7 @@
 
 
     <!-- feature section start -->
-    <section class="feature-section section-b-space">
+<!--     <section class="feature-section section-b-space">
         <div class="bg-effect">
             <img src="{% static 'assets/images/feature.gif'%}" class="img-fluid feature-left" alt="">
             <img src="{% static 'assets/images/feature.gif'%}" class="img-fluid feature-right" alt="">
@@ -865,11 +862,11 @@
             <img src="https://themes.pixelstrap.net/mega_bot/assets/svg/pagination-robot.svg" class="img-fluid" alt="">
         </div>
         <div class="swiper-pagination feature-pagination"></div>
-    </section>
+    </section> -->
     <!-- feature section end -->
 
     <!-- pricing section start -->
-    <section class="pricing-section section-b-space">
+    <!-- <section class="pricing-section section-b-space">
         <div class="container">
             <div class="title-horizontal">
                 <h2>Unleash limitless potential & versatile features for every need</h2>
@@ -1019,11 +1016,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- pricing section end -->
 
     <!-- testimonial section start -->
-    <section class="testimonial-section section-b-space">
+<!--     <section class="testimonial-section section-b-space">
         <div class="container">
             <div class="title-basic">
                 <h2>Check out how much Megabot is loved
@@ -1116,7 +1113,7 @@
                 <div class="swiper-pagination"></div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- testimonial section end -->
 
     <!-- faq section start -->
@@ -1230,7 +1227,7 @@
 
 
     <!-- contact us start -->
-    <section class="info-section section-b-space">
+<!--     <section class="info-section section-b-space">
         <div class="container">
             <div class="info-box" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="100">
                 <div class="hand-effect d-md-block d-none">
@@ -1254,7 +1251,7 @@
                 </a>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- contact us end -->
 
     <!-- footer section start-->
