--- a/templates/index.html
+++ b/templates/index.html
@@ -1155,7 +1155,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+<!--                 <div class="accordion-item">
                     <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                         <button data-cursor="pointer" class="accordion-button collapsed" type="button"
                             data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree"
@@ -1219,7 +1219,7 @@
                             virtually limitless.
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -1259,16 +1259,16 @@
         <div class="container">
             <div class="footer-row">
                 <div class="footer-main">
-                    <a href="#" class="footer-logo"><img src="https://themes.pixelstrap.net/mega_bot/assets/images/logo.svg" class="img-fluid" alt=""></a>
-                    <h3>SUBSCRIBE TO OUR NEWSLETTER</h3>
-                    <form>
+                  <a href="#" class="footer-logo"><img src="https://themes.pixelstrap.net/mega_bot/assets/images/logo.svg" class="img-fluid" alt=""></a>  
+                    <h3>Follow me on Social Media</h3>
+              <!--         <form>
                         <div class="input-group">
                             <input type="email" class="form-control" id="exampleFormControlInput1"
                                 placeholder="Enter your mail">
                             <a href="#" data-cursor="pointer" class="btn-basic">Subscribe</a>
                         </div>
                     </form>
-                    <ul class="social-links">
+ -->                    <ul class="social-links">
                         <li><a data-cursor="pointer" href="https://www.facebook.com/"><img
                                     src="https://themes.pixelstrap.net/mega_bot/assets/svg/social/fb.svg" class="img-fluid" alt="facebook"></a></li>
                         <li><a data-cursor="pointer" href="https://in.linkedin.com/"><img
@@ -1287,8 +1287,8 @@
                     <div class="footer-content">
                         <ul>
                             <li><a data-cursor="pointer" href="index.html">Home</a></li>
-                            <li><a data-cursor="pointer" href="service.html">Service</a></li>
-                            <li><a data-cursor="pointer" href="pricing.html">Pricing</a></li>
+<!--                             <li><a data-cursor="pointer" href="service.html">Service</a></li>
+                            <li><a data-cursor="pointer" href="pricing.html">Pricing</a></li> -->
                             <li><a data-cursor="pointer" href="contact-us.html">Contact us</a></li>
                         </ul>
                     </div>
@@ -1302,8 +1302,8 @@
                         <ul>
                             <li><a data-cursor="pointer" href="chat.html">Generate</a></li>
                             <li><a data-cursor="pointer" href="chat.html">Find Image</a></li>
-                            <li><a data-cursor="pointer" href="chat.html">Email writer</a></li>
-                            <li><a data-cursor="pointer" href="chat.html">Social media</a></li>
+<!--                             <li><a data-cursor="pointer" href="chat.html">Email writer</a></li>
+                            <li><a data-cursor="pointer" href="chat.html">Social media</a></li> -->
                         </ul>
                     </div>
                 </div>
@@ -1316,8 +1316,8 @@
                         <ul>
                             <li><a data-cursor="pointer" href="login.html">Login</a></li>
                             <li><a data-cursor="pointer" href="blog-listing.html">Blog listing</a></li>
-                            <li><a data-cursor="pointer" href="blog-grid.html">Blog Grid</a></li>
-                            <li><a data-cursor="pointer" href="blog-details.html">Blog Details</a></li>
+<!--                             <li><a data-cursor="pointer" href="blog-grid.html">Blog Grid</a></li>
+                            <li><a data-cursor="pointer" href="blog-details.html">Blog Details</a></li> -->
                         </ul>
                     </div>
                 </div>
